--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="index.js"></script>
+
 </head>
 <body>
     <div class="grid-container">
-        <nav></nav>
+        <nav>
+            <div class="menu" onclick="Menu()"><i class='bx bx-menu'></i></div>
+            <div id="info">
+                <ol>
+                    <li>home</li>
+                    <li>produkter</li>
+                    <li>spel</li>
+                    <li>formulär</li>
+                </ol>
+            </div>
+        </nav>
         <main></main>
+        <aside></aside>
         <footer></footer>
     </div>
 </body>
