--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="index.js"></script>
-
+    
 </head>
 <body>
     <div class="grid-container">
     <header>
-        <div class="menu" ><i onclick="Menu()" class='bx bx-menu'></i><button class="dark-mode" onclick="toggle()"> <img src="moon-solid-24.png" alt=""> </button></div>
+
+        <div class="menu" ><i onclick="Menu()" class='bx bx-menu'></i>
+            <button class="dark-mode" onclick="toggle()"> <img src="moon-solid-24.png" alt=""></button>
+        </div>
         <div id="info">
             <ol>
                 <li><a href="index.html">Home</a></li>
@@ -21,6 +24,7 @@
                 <li><a href="sida 4.html">Spel</a></li>
             </ol>
         </div>
+        <h2>make Sweden great agian</h2>
        <script>
          function toggle(){
             let html =document.getElementsByTagName("html")
@@ -30,7 +34,6 @@
        </script>
     </header>
         <nav>
-            <p>Make Sweden </p>
         </nav>
         <main></main>
         <aside></aside>
