--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         }
        </script>
     </header>
-        <nav>
-        </nav>
         <main></main>
         <aside></aside>
-        <footer></footer>
+        <footer>
+           <a href="tenor.gif"><img src="R.gif" alt=""></a> 
+            <h4 id="kontakta">Kontakta oss</h4>
+            <p>Telefonnummer: 0760383578 <br>Gmail: Makeswedengreat@gmail.com Adress: Solvägen 3 </p>
+        </footer>
     </div>
 </body>
 </html>
