--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="index.js"></script>
+  
 </head>
 <body>
     <div class="grid-container">
@@ -35,10 +35,24 @@
         <main></main>
         <aside></aside>
         <footer>
-           <a href="tenor.gif"><img src="R.gif" alt=""></a> 
+
+<!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <img src="tenor.gif" alt="">
+    </div>
+
+    </div>
+           <a id="flagga""><img src="R.gif" alt="" ></a> 
+            <audio src="youtube_Wl959QnD3lM_audio.mp3" controls loop></audio>
             <h4 id="kontakta">Kontakta oss</h4>
             <p>Telefonnummer: 0760383578 <br>Gmail: Makeswedengreat@gmail.com Adress: Solvägen 3 </p>
         </footer>
+
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
