--- a/sida 2.html
+++ b/sida 2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="sida 2.css">
+    <link rel="stylesheet" href="index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="index.js"></script>
 </head>
@@ -32,11 +32,13 @@
         }
        </script>
     </header>
-        <nav>
-        </nav>
         <main></main>
         <aside></aside>
-        <footer></footer>
+        <footer>
+           <a href="tenor.gif"><img src="R.gif" alt=""></a> 
+            <h4 id="kontakta">Kontakta oss</h4>
+            <p>Telefonnummer: 0760383578 <br>Gmail: Makeswedengreat@gmail.com Adress: Solvägen 3 </p>
+        </footer>
     </div>
 </body>
 </html>
