--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
 
     </div>
-           <a id="flagga""><img src="R.gif" alt="" ></a> 
-            <audio src="youtube_Wl959QnD3lM_audio.mp3" controls loop></audio>
+           <a id="flagga"><img src="R.gif" alt="" ></a> 
+            
             <h4 id="kontakta">Kontakta oss</h4>
             <p>Telefonnummer: 0760383578 <br>Gmail: Makeswedengreat@gmail.com Adress: Solvägen 3 </p>
         </footer>
