--- a/sida 2.html
+++ b/sida 2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="sida 2.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="index.js"></script>
+  
 </head>
 <body>
     <div class="grid-container">
@@ -32,13 +32,48 @@
         }
        </script>
     </header>
-        <main></main>
+    <main class="Shop-container"> 
+        <div class="text"> 
+            <img src="Skärmklipp.PNG" alt="">
+            <h3>Make Sweden Great Again keps</h3>
+            <p>299:-kr</p>
+        </div>
+        <div class="text">
+            <img src="Skärmklipp2.PNG" alt="">
+            <h3 >Make Sweden Great Again T-shirt herr</h3>
+            <p>499:-kr</p>
+        </div>
+        <div class="text">
+            <img src="Make-Sweden-Great-Again-Mugg.jpg" alt="">
+            <h3>Make Sweden Great Again kaffe kopp</h3>
+            <p>150:-kr</p>
+        </div>
+        <div class="text">
+            <img src="cccb3dbc-dd0c-4130-bae7-b429c944a395.jpg" alt="">
+            <h3>Svenskt pass (tillfälligt)</h3>
+            <p>20000:-kr</p>
+        </div>
+    </main>
         <aside></aside>
         <footer>
-           <a href="tenor.gif"><img src="R.gif" alt=""></a> 
+
+
+    <div id="myModal" class="modal">
+
+   
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <img src="tenor.gif" alt="">
+    </div>
+
+    </div>
+           <a id="flagga"><img src="R.gif" alt="" ></a> 
+            
             <h4 id="kontakta">Kontakta oss</h4>
             <p>Telefonnummer: 0760383578 <br>Gmail: Makeswedengreat@gmail.com Adress: Solvägen 3 </p>
         </footer>
+
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
