--- a/sida 4.html
+++ b/sida 4.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="sida 4.css">
+  <link rel="stylesheet" href="gemensam.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -19,13 +20,13 @@
       </div>
       <div id="info">
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Hem</a></li>
           <li><a href="sida 2.html">Produkter</a></li>
-          <li><a href="sida 3.html">Formulär</a></li>
+          <li><a href="sida 3.html">Ansökan</a></li>
           <li><a href="sida 4.html">Spel</a></li>
         </ol>
       </div>
-      <h2>make Sweden great agian</h2>
+      <h2>Make Sweden great agian</h2>
       <script>
         function toggle() {
           let html = document.getElementsByTagName("html")
@@ -74,6 +75,8 @@
         }
       </script>
       <button onclick="starta()">Starta spel</button>
+      <br>
+      
     </main>
     <aside></aside>
     <footer>
