--- a/sida 3.html
+++ b/sida 3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="sida 3.css">
+    <link rel="stylesheet" href="gemensam.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   
 </head>
@@ -17,13 +18,13 @@
         </div>
         <div id="info">
             <ol>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="sida 2.html">Produkter</a></li>
-                <li><a href="sida 3.html">Formulär</a></li>
+                <li><a href="sida 3.html">Ansökan</a></li>
                 <li><a href="sida 4.html">Spel</a></li>
             </ol>
         </div>
-        <h2>make Sweden great agian</h2>
+        <h2>Make Sweden great agian</h2>
        <script>
          function toggle(){
             let html =document.getElementsByTagName("html")
@@ -33,7 +34,7 @@
        </script>
     </header>
     <main> 
-        <h1>Formulär</h1>
+        <h1>Ansökan till SD</h1>
 
         <div class="form">
 
@@ -42,10 +43,10 @@
                 <div class="innerform">
                 <label for="firstname">Förnamn</label>
                 <br>
-                <input type="text" id="Firsname" name="Firstname"> <br>
+                <input type="text" id="Firsname" name="Firstname"> <br><br>
                 <label for="Lastname">Efternamn</label>
                 <br>
-                <input type="text" name="Lasname" id="Lasname"><br>
+                <input type="text" name="Lasname" id="Lasname"><br><br>
                 <label for="email">E-post</label>
                 <br>
                 <div class="control has-icons-left has-icons-right">
